# mazes

./: .gitignore  LICENSE
c/: CMakeLists.txt
c/src/: main.c  maze.c  maze.h
c/src/tests/: test_maze.c
cpp/: CMakeLists.txt
cpp/src/: main.cpp  maze.cpp  maze.h
cpp/src/tests/: test_maze.cpp
zig/: build.zig  build.zig.zon
zig/src/: main.zig  maze.zig
